--- a/Front-end/survey-front/package.json
+++ b/Front-end/survey-front/package.json
@@ -10,10 +10,12 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@reduxjs/toolkit": "^1.9.7",
     "@tanstack/react-query": "^5.0.0",
     "axios": "^1.5.1",
     "react": "^18.2.0",
-    "react-dom": "^18.2.0"
+    "react-dom": "^18.2.0",
+    "react-redux": "^8.1.3"
   },
   "devDependencies": {
     "@types/react": "^18.2.15",
