Fixed submission handlers

--- a/Back-end/SurveyTask/SurveyTask/appsettings.json
+++ b/Back-end/SurveyTask/SurveyTask/appsettings.json
@@ -7,6 +7,6 @@
   },
   "AllowedHosts": "*",
   "ConnectionStrings": {
-    "SurveyTaskConnectionString": "Host=localhost;Port=5432;Username=postgres;Password=postgres;Database=survey_db;"
+    "SurveyTaskConnectionString": "Host=localhost;Port=5432;Username=postgres;Password=postgres;Database=survey_db;Include Error Detail=True"
   }
 }
