Auth backend added

--- a/Back-end/SurveyTask/SurveyTask/appsettings.json
+++ b/Back-end/SurveyTask/SurveyTask/appsettings.json
@@ -7,6 +7,12 @@
   },
   "AllowedHosts": "*",
   "ConnectionStrings": {
-    "SurveyTaskConnectionString": "Host=localhost;Port=5432;Username=postgres;Password=postgres;Database=survey_db;Include Error Detail=True"
+    "SurveyTaskConnectionString": "Host=localhost;Port=5432;Username=postgres;Password=postgres;Database=survey_db;Include Error Detail=True",
+    "SurveyTaskAuthConnetctionString": "Host=localhost;Port=5432;Username=postgres;Password=postgres;Database=survey_auth_db;Include Error Detail=True"
+  },
+  "Jwt": {
+    "Key": "dwc8aqu8ExmFfJzKLudJ4DpefeE7dDAMBhSXexM",
+    "Issuer": "https://localhost:7279/",
+    "Audience": "https://localhost:7279/"
   }
 }
